# data-fabric

./: .gitignore  =2.8.0  CLAUDE.md  LICENSE  PORT_CONFIG_README.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  restart.sh  start.sh  status.sh  stop.sh  test-results.json
BLETools/: .editorconfig  build.ps1  git-save.ps1  gradle.properties  key.jks  settings.gradle.kts
company_knowledge_base/: README_with_metadata.md
config/: ports.yml  prometheus.yml
docs/: README.md  index.md  installation.md
main-website/: CLAUDE.md  (+3 more)
src/backend/: .env  Dockerfile  README.md  app.py  get_all_documents.py  pyproject.toml  simple_reindex.py
src/backend/application/services/: auth_service.py  document_service.py  tag_service.py
src/backend/domain/entities/: directory.py  permission_rule.py  tag.py  user.py
src/backend/domain/repositories/: audit_repository.py  document_repository.py  file_repository.py  tag_repository.py
src/backend/domain/services/: permission_service.py
src/backend/infrastructure/config/: settings.py
src/backend/infrastructure/external_services/search/: __init__.py  elasticsearch_client.py
src/backend/infrastructure/persistence/: database.py  models.py
src/backend/infrastructure/repositories/: audit_repository_impl.py  document_repository_impl.py  tag_repository_impl.py  user_repository_impl.py
src/backend/infrastructure/storage/: file_storage.py
src/backend/presentation/api/: __init__.py
src/backend/presentation/controllers/: audit_controller.py  auth_controller.py  category_controller.py  document_controller.py  file_controller.py  search_controller.py  user_controller.py
src/backend/presentation/rest_api/: file_controller.py
src/backend/scripts/: elasticsearch_indexer.py  init_documents.py  reindex_documents.py  reset_documents.py
src/backend/shared_kernel/exceptions/: domain_exceptions.py
src/backend/shared_kernel/utils/: uuid_utils.py  validators.py
(+625 files in other folders)
